--- a/melvinPortfolio/package.json
+++ b/melvinPortfolio/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.1",
+    "ejs": "^2.4.1",
+    "express": "^4.13.4",
     "morgan": "^1.6.1"
   }
 }
