--- a/melvinPortfolio/package.json
+++ b/melvinPortfolio/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "body-parser": "^1.14.2",
+    "bower": "^1.7.7",
     "cookie-parser": "^1.4.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "nodemon": "^1.9.1"
   }
 }
